major improvements, ready for Demo

--- a/tithonus-server/tithonus-client/index.html
+++ b/tithonus-server/tithonus-client/index.html
@@ -91,6 +91,12 @@
     vertical-align:middle
   }
   #vsText {
+         text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+    color: gray;
 
   }
 
@@ -138,9 +144,12 @@
   <button id="back">Back</button>
 
   <div id="vsText">
-    <h1><font color="#8A0808" id="p1Text">p1</font>
-    VS.
-    <font color="#DF7401" id="p2Text">p2</font>
+    <h1><font color="#482F1C" id="p1Text">p1</font>
+    <img src="assets/ant-brown.png">
+    vs.
+    <img src="assets/ant-orange.png">
+    <font color="#C7654E" id="p2Text">p2</font>
+
     </h1>
   </div>
 
